--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.389.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nunjucks": "^3.1.7"
