--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.389.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "moment": "^2.23.0",
     "nunjucks": "^3.1.7"
   }
 }
