--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "acquisio-test",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "11.6.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
