--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "gulp": "^4.0.0",
     "moment": "^2.23.0",
     "nunjucks": "^3.1.7"
+  },
+  "devDependencies": {
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.0.2"
   }
 }
