--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "aws-sdk": "^2.389.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.0",
     "moment": "^2.23.0",
     "nunjucks": "^3.1.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cssnano": "^2.1.3",
-    "gulp-sass": "^4.0.2"
+    "gulp-nodemon": "^2.4.2",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2"
   }
 }
